--- a/config/locales/simple_form.ja.yml
+++ b/config/locales/simple_form.ja.yml
@@ -8,6 +8,7 @@ ja:
     labels:
       user:
         name: 'ユーザー名'
+        message: 'ステータスメッセージ'
         password: 'パスワード'
         password_confirmation: 'パスワード（確認）'
         nickname: 'ニックネーム'
